wflow_git_commit(all = TRUE)

--- a/analysis/about.Rmd
+++ b/analysis/about.Rmd
@@ -8,3 +8,9 @@ editor_options:
 ---
 
 Describe your project.
+
+This project is about enrichment analysis of 44 tissues of eQTL in GTEx, which is performed in 2 ways. One is performed in binary annotations, and the other is in PIPs, i.e., continuous annotations. So far, I have only finished the binary annotations part, whose results are shown below.
+
+![Figure 1: (a): enrichment of all tissues.](/Users/cjr/Documents/留学/暑研/Xin/reading_materials/5th/enrichment_analysis_SCZ_cis-eQTLs.png)
+![(b): enrichment of significantly enriched tissues.](/Users/cjr/Documents/留学/暑研/Xin/reading_materials/5th/significant_enrichment_SCZ_cis-eQTLs.png)
+ 
