binary and PIP (latest)

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Home"
+title: "Binary and PIP"
 site: workflowr::wflow_site
 output:
   workflowr::wflow_html:
@@ -8,4 +8,10 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+This project is about enrichment analysis of 44 tissues of eQTL in GTEx, which is performed in 2 ways. One is performed in binary annotations, and the other is in PIPs, i.e., continuous annotations.
+
+Please see the results as follows.
+
+* [SCZ against binary annotations of GTEx eQTLs](binary.html)
+
+* [SCZ against PIPs of GTEx eQTLs](PIP.html)
