--- a/analysis/binary.Rmd
+++ b/analysis/binary.Rmd
@@ -6,6 +6,26 @@ output: workflowr::wflow_html
 editor_options:
   chunk_output_type: console
 ---
+# Goal
+
+Identify biologically relevant tissues to complex traits.
+
+# Methods
+
+The enrichment level is the ratio of the log odds of the SNP causal states to the complex trait given that the SNPs are eQTLs from a certain tissue, to that of the SNPs which are not eQTLs from the tissue. The formula is as follows.
+
+$$log \frac {P(\gamma_i = 1)} {P(\gamma_i = 0)} = \alpha_0 + \alpha_1 d_i$$
+where $\alpha_1$ is the enrichment level, $d_i$ means whether SNP i is an eQTL, and $\gamma_i$ is the causal state of SNP i to the complex trait.
+
+# Input
+
+GWAS data, binary eQTL data
+
+# Output
+
+$\alpha_1$, credible intervals of $\alpha_1$
+
+# Results
 
 I have analyzed the enrichment of eQTLs in various tissues on SCZ, and the results of enrichment of all tissues and significantly enriched tissues are shown as Figure 1.
 
